2005-01-22  Rodney Dawes  <dobey@novell.com>

	* gnome-autogen.sh: Fix the (AC|IT)_PROG_INTLTOOL support for
	both places where we grep for it
	(version_check): If we are checking for automake = 1.4, then make
	sure we error out with that error when we find it, and not >= 1.4
	since we don't actually check for >= 1.4

	Fixes #129903

2004-11-24  Mariano Suárez-Alvarez <mariano@gnome.org>

	* gnome-autogen.sh: grep wants basic regexps, not extended ones:
	fix the	regular expression for INTLTOOL.

2004-11-24  Rodney Dawes  <dobey@novell.com>

	* gnome-autogen.sh: Add support for IT_PROG_INTLTOOL which
	deprecates AC_PROG_INTLTOOL

2004-11-09  Jordi Mallach  <jordi@sindominio.net>

	* gnome-autogen.sh: Workaround automake-1.4 limitations by just
	using --force if $REQUIRED_AUTOMAKE_VERSION != 1.4. This avoids
	Louie's wrath too. :)

2004-11-09  Jordi Mallach  <jordi@sindominio.net>

	* gnome-autogen.sh: Call all the bootstrap programs (libtoolize,
	intltoolize, gtkdocize, automake) using --force and --copy
	consistently.

2004-10-28  James Henstridge  <james@jamesh.id.au>

	* gnome-autogen.sh: get rid of the code that modified PATH,
	ACLOCAL_FLAGS and LD_LIBRARY_PATH based on $GNOME2_PATH, since
	this was broken.  It could cause configure tests to pass, when the
	subsequent build would fail due to path problems.  For more
	details, see bug #140210.

	* gnome-autogen.sh: if the directory is read only, skip it.  This
	helps in cases where a directory from a failed "make distcheck" is
	lying around.  Should fix bug #136093.

	* gnome-autogen.sh (m4dir): fix up the AC_CONFIG_MACRO_DIR check
	to work with sub-package configure.in's.

2004-10-27  James Henstridge  <james@jamesh.id.au>

	* gnome-autogen.sh (ACLOCAL): if AC_CONFIG_MACRO_DIR() is used in
	configure.ac, pass that directory to aclocal.
	Run libtoolize if the configure.ac file calls LT_INIT (the new
	name for AC_PROG_LIBTOOL in libtool-2.0).

2004-08-16  Kjartan Maraas  <kmaraas@gnome.org>
