@@ -1,18 +1,14 @@
+COPYING
+INSTALL
 Makefile.in
 Makefile
 aclocal.m4
 autom4te.cache
-config.guess
-config.h.in
-config.sub
-configure
-ltconfig
-ltmain.sh
-config.log
-config.h
 config.cache
-libtool
+config.log
 config.status
-stamp-h
-stamp.h
+configure
+install-sh
+missing
+mkinstalldirs
 gnome-common.spec
